deployment/database.yml
apiVersion: v1
kind: Service
metadata:
  name: category-mysql-service
spec:
  selector:
    app: category-mysql
  ports:
    - port: 3307
      targetPort: 3307
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: category-mysql-service
spec:
  selector:
    matchLabels:
      app: category-mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: category-mysql
    spec:
      containers:
        - name: category-mysql
          image: mysql:8.0
          ports:
            - containerPort: 3307
          volumeMounts:
            - name: mysql-config
              mountPath: /etc/mysql/conf.d
      volumes:
        - name: mysql-config
          configMap:
            name: category-mysql-config
