deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: category
spec:
  replicas: 1
  selector:
    matchLabels:
      app: category
  template:
    metadata:
      labels:
        app: category
    spec:
      containers:
        - name: category-app
          image: devleoperj/category-app:v1
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: category-service
spec:
  selector:
    app: category
  ports:
    - port: 80
      targetPort: 8080
